--- a/amalin/_locales/en/messages.json
+++ b/amalin/_locales/en/messages.json
@@ -1,18 +1,20 @@
 {
-	"extDesc":{
-		"message": "金沢工業大学 -非公式-",
-		"description": "拡張機能説明"
-	},
-	"amalinStatus0":{
-		"message": "Borrowing"
-	},
-	"amalinStatus1":{
-		"message": "Keeping"
-	},
-	"amalinLocation0":{
-		"message": "LC hasn't this book."
-	},
-	"amalinLocation1":{
-		"message": "LC has this book."
-	}
+  "extName": {
+    "message": "AmaLin"
+  },
+  "extDesc":{
+    "message": "Kanazawa Institute Of Technology -Unofficial-"
+  },
+  "amalinStatus0":{
+    "message": "Borrowing"
+  },
+  "amalinStatus1":{
+    "message": "Keeping"
+  },
+  "amalinLocation0":{
+    "message": "LC hasn't this book."
+  },
+  "amalinLocation1":{
+    "message": "LC has this book."
+  }
 }
