--- a/amalin/_locales/ja/messages.json
+++ b/amalin/_locales/ja/messages.json
@@ -1,18 +1,20 @@
 {
-	"extDesc":{
-		"message": "金沢工業大学 -非公式-",
-		"description": "拡張機能説明"
-	},
-	"amalinStatus0":{
-		"message": "貸出"
-	},
-	"amalinStatus1":{
-		"message": "保管"
-	},
-	"amalinLocation0":{
-		"message": "LCに所蔵されていません"
-	},
-	"amalinLocation1":{
-		"message": "LCに所蔵されています"
-	}
+  "extName": {
+    "message": "アマリン"
+  },
+  "extDesc":{
+    "message": "金沢工業大学 -非公式-"
+  },
+  "amalinStatus0": {
+    "message": "貸出"
+  },
+  "amalinStatus1": {
+    "message": "保管"
+  },
+  "amalinLocation0": {
+    "message": "LCに所蔵されていません"
+  },
+  "amalinLocation1": {
+    "message": "LCに所蔵されています"
+  }
 }
