シャトルバス改修     細かい修正     バス通知音の大きさを変更可能

--- a/bus/_locales/en/messages.json
+++ b/bus/_locales/en/messages.json
@@ -12,6 +12,9 @@
   "optionsLabelBusNotify": {
     "message": "Departure time notification"
   },
+  "optionsLabelBusNotifySoundVolume": {
+    "message": "Volume of notification"
+  },
   "optionsLabelDepartureBuilding": {
     "message": "Departure building"
   },
