シャトルバス改修     細かい修正     バス通知時刻を変更可能

--- a/bus/_locales/en/messages.json
+++ b/bus/_locales/en/messages.json
@@ -15,6 +15,12 @@
   "optionsLabelBusNotifySoundVolume": {
     "message": "Volume of notification"
   },
+  "optionsLabelBusNotifyMinutesAgo": {
+    "message": "Notification time"
+  },
+  "optionsLabelBusNotifyMinutesAgo2": {
+    "message": "minutes ago"
+  },
   "optionsLabelDepartureBuilding": {
     "message": "Departure building"
   },
