アマリン・バス・ログイン     ベータ版     拡張機能名称変更 ログイン     登録完了後リロード

--- a/amalin/_locales/en/messages.json
+++ b/amalin/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "extName": {
-    "message": "AmaLin"
+    "message": "K.I.T. AmaLin"
   },
   "extDesc":{
     "message": "Kanazawa Institute Of Technology -Unofficial-"
