--- a/bus/_locales/en/messages.json
+++ b/bus/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "extName": {
-    "message": "Shuttle Bus"
+    "message": "K.I.T. Shuttle Bus"
   },
   "extDesc": {
     "message": "Kanazawa Insutitute Of Technology -Unofficial-"
