--- a/login/_locales/en/messages.json
+++ b/login/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "extName": {
-    "message": "Auto Login"
+    "message": "K.I.T. Auto Login"
   },
   "extDesc": {
     "message": "Kanazawa Insutitute Of Technology -Unofficial-"
