あとで借りる機能の追加 #6

--- a/amalin/_locales/en/messages.json
+++ b/amalin/_locales/en/messages.json
@@ -16,5 +16,14 @@
   },
   "amalinLocation1":{
     "message": "LC has this book."
+  },
+  "amalinBorrowItLaterAlready": {
+    "message": "Borrow It Later: Already"
+  },
+  "amalinBorrowItLaterYet": {
+    "message": "Borrow It Later: Yet"
+  },
+  "amalinBorrowItLaterSlider": {
+    "message": "Delete"
   }
 }
